# CPP-os-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README.md  chdir.md  exists.md  getcwd.md  is_dir.md  is_file.md  is_symlink.md  join.md  listdir.md
include/: config.h  os.h
include/config/shared/: __defs.h
include/config/static/: __defs.h
include/shared/: os.h
include/static/: os.h
install/shared/: os.h
install/static/: os.h
src/: cbool.h  cwalk.h  join.cpp  listdir.cpp  names.h  os.cpp  path.cpp  winstat.h
tests/: getcwd_chdir.cpp  join.cpp  listdir.cpp  path.cpp
